--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ pero si deseás regalarme algo, podés colaborar con mis sueños y anhelos✨</b
         <!-- Código QR -->
     <div class="qr-container mt-4">
       <p>O escanea el código QR para subir tus recuerdos:</p>
-      <a href="https://weduploader.com" target="_blank">
+      <a href="https://weduploader.com/upload/8qd8DP2R6BloZQUQ" target="_blank">
         <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://weduploader.com/upload/8qd8DP2R6BloZQUQ" alt="Código QR para subir archivos" class="img-fluid" />
       </a>
       <p>
