--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ Seguime en mi cuenta de Instagram y etiquetame en tus fotos y videos.</p>
 <script>
 const CLIENT_ID = "d950ae09b4e14eb0b82b70151b1dcb82"; 
 const REDIRECT_URI = "https://julianpanza.github.io/alfon15invite/"; 
-const PLAYLIST_ID = "4Vm8iih2i2K6iXuPev61Il?si=1e9fa2e72b1b4d90ID"; 
+const PLAYLIST_ID = "4Vm8iih2i2K6iXuPev61Il"; 
 let accessToken = getTokenFromUrl() || localStorage.getItem("spotify_token");
 
 // Obtener token desde la URL y almacenarlo
