--- a/index.html
+++ b/index.html
@@ -281,123 +281,128 @@ Seguime en mi cuenta de Instagram y etiquetame en tus fotos y videos.</p>
 
 </section>
  
-    <!-- Canciones -->
-    <section class="canciones">
+   <!-- Canciones -->
+<section class="canciones">
+    <div class="container">
+        <iframe style="border-radius:12px"
+            src="https://open.spotify.com/embed/playlist/4Vm8iih2i2K6iXuPev61Il"
+            width="100%"
+            height="250"
+            frameborder="0"
+            allowfullscreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+        </iframe>
 
-  <div class="container">
-<iframe style="border-radius:12px" 
-    src="https://open.spotify.com/embed/playlist/4Vm8iih2i2K6iXuPev61Il?si=1e9fa2e72b1b4d90" 
-    width="100%" 
-    height="250" 
-    frameborder="0" 
-    allowfullscreen="" 
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
-</iframe>
+        <br>
+        <div class="animated divCanciones">
+            <input type="text" id="songSearch" placeholder="Escribe una canción...">
+            <button onclick="searchSong()">🔍 Buscar</button>
+            <div id="searchResults"></div>
+        </div>
+    </div>
 
-<br>
-<div class="animated divCanciones">
-<input type="text" id="songSearch" placeholder="Escribe una canción...">
-<button onclick="searchSong()">🔍 Buscar</button>
-<div id="searchResults"></div>
+    <script>
+        const CLIENT_ID = "d950ae09b4e14eb0b82b70151b1dcb82"; 
+        const REDIRECT_URI = "https://julianpanza.github.io/alfon15invite/"; 
+        const PLAYLIST_ID = "4Vm8iih2i2K6iXuPev61Il";
 
-<script>
-const CLIENT_ID = "d950ae09b4e14eb0b82b70151b1dcb82"; 
-const REDIRECT_URI = "https://julianpanza.github.io/alfon15invite/"; 
-const PLAYLIST_ID = "4Vm8iih2i2K6iXuPev61Il"; 
-let accessToken = getTokenFromUrl() || localStorage.getItem("spotify_token");
+        let accessToken = getTokenFromUrl() || localStorage.getItem("spotify_token");
+        let tokenExpiration = localStorage.getItem("spotify_token_expiration");
 
-// Obtener token desde la URL y almacenarlo
-function getTokenFromUrl() {
-    const hash = window.location.hash.substring(1);
-    const params = new URLSearchParams(hash);
-    const token = params.get("access_token");
+        function getTokenFromUrl() {
+            const hash = window.location.hash.substring(1);
+            const params = new URLSearchParams(hash);
+            const token = params.get("access_token");
+            const expiresIn = params.get("expires_in");
 
-    if (token) {
-        localStorage.setItem("spotify_token", token); // Guardar token en localStorage
-        window.history.pushState({}, document.title, window.location.pathname); // Limpiar la URL
-    }
-    
-    return token;
-}
+            if (token && expiresIn) {
+                localStorage.setItem("spotify_token", token);
+                localStorage.setItem("spotify_token_expiration", Date.now() + expiresIn * 1000);
+                window.history.pushState({}, document.title, window.location.pathname);
+            }
 
-// Función para autenticarse en Spotify
-function authenticate() {
-    const authUrl = `https://accounts.spotify.com/authorize?client_id=${CLIENT_ID}&response_type=token&redirect_uri=${REDIRECT_URI}&scope=playlist-modify-public playlist-modify-private`;
-    window.location.href = authUrl;
-}
-
-// Función para buscar canciones en Spotify
-async function searchSong() {
-    if (!accessToken) {
-        authenticate();
-        return;
-    }
-
-    const query = document.getElementById("songSearch").value;
-    if (!query) return;
-
-    try {
-        const response = await fetch(`https://api.spotify.com/v1/search?q=${encodeURIComponent(query)}&type=track&limit=5`, {
-            headers: { Authorization: `Bearer ${accessToken}` }
-        });
-
-        if (!response.ok) throw new Error("Error al buscar canciones");
-
-        const data = await response.json();
-        const resultsDiv = document.getElementById("searchResults");
-        resultsDiv.innerHTML = "";
-
-        data.tracks.items.forEach(track => {
-            const trackDiv = document.createElement("div");
-            trackDiv.innerHTML = `
-                <p>${track.name} - ${track.artists[0].name} 
-                    <button onclick="addSong('${track.uri}')">➕ Agregar</button>
-                </p>
-            `;
-            resultsDiv.appendChild(trackDiv);
-        });
-    } catch (error) {
-        console.error(error);
-        alert("❌ Hubo un problema al buscar las canciones.");
-    }
-}
-
-// Función para agregar una canción a la playlist
-async function addSong(trackUri) {
-    if (!accessToken) {
-        authenticate();
-        return;
-    }
-
-    try {
-        const response = await fetch(`https://api.spotify.com/v1/playlists/${PLAYLIST_ID}/tracks`, {
-            method: "POST",
-            headers: {
-                Authorization: `Bearer ${accessToken}`,
-                "Content-Type": "application/json"
-            },
-            body: JSON.stringify({ uris: [trackUri] })
-        });
-
-        const result = await response.json();
-        console.log("Respuesta de Spotify:", result);
-
-        if (response.ok) {
-            alert("✅ Canción agregada a la playlist");
-        } else {
-            alert("❌ Error al agregar la canción. Ver consola.");
+            return token;
         }
-    } catch (error) {
-        console.error("Error al agregar canción:", error);
-        alert("❌ No se pudo agregar la canción. Ver consola.");
-    }
-}
 
-// Verifica si ya hay un token cuando el usuario entra
-if (!accessToken) {
-    authenticate();
-}
-</script>
+        function authenticate() {
+            const authUrl = `https://accounts.spotify.com/authorize?client_id=${CLIENT_ID}&response_type=token&redirect_uri=${REDIRECT_URI}&scope=playlist-modify-public playlist-modify-private`;
+            window.location.href = authUrl;
+        }
+
+        function isTokenExpired() {
+            return !tokenExpiration || Date.now() > tokenExpiration;
+        }
+
+        if (!accessToken || isTokenExpired()) {
+            authenticate();
+        }
+
+        async function searchSong() {
+            if (!accessToken || isTokenExpired()) {
+                authenticate();
+                return;
+            }
+
+            const query = document.getElementById("songSearch").value;
+            if (!query) return;
+
+            try {
+                const response = await fetch(`https://api.spotify.com/v1/search?q=${encodeURIComponent(query)}&type=track&limit=5`, {
+                    headers: { Authorization: `Bearer ${accessToken}` }
+                });
+
+                if (!response.ok) throw new Error("Error al buscar canciones");
+
+                const data = await response.json();
+                const resultsDiv = document.getElementById("searchResults");
+                resultsDiv.innerHTML = "";
+
+                data.tracks.items.forEach(track => {
+                    const trackDiv = document.createElement("div");
+                    trackDiv.innerHTML = `
+                        <p>${track.name} - ${track.artists[0].name} 
+                            <button onclick="addSong('${track.uri}')">➕ Agregar</button>
+                        </p>
+                    `;
+                    resultsDiv.appendChild(trackDiv);
+                });
+            } catch (error) {
+                console.error(error);
+                alert("❌ Hubo un problema al buscar las canciones.");
+            }
+        }
+
+        async function addSong(trackUri) {
+            if (!accessToken || isTokenExpired()) {
+                authenticate();
+                return;
+            }
+
+            try {
+                const response = await fetch(`https://api.spotify.com/v1/playlists/${PLAYLIST_ID}/tracks`, {
+                    method: "POST",
+                    headers: {
+                        Authorization: `Bearer ${accessToken}`,
+                        "Content-Type": "application/json"
+                    },
+                    body: JSON.stringify({ uris: [trackUri] })
+                });
+
+                const result = await response.json();
+                console.log("Respuesta de Spotify:", result);
+
+                if (response.ok) {
+                    alert("✅ Canción agregada a la playlist");
+                } else {
+                    alert("❌ Error al agregar la canción. Ver consola.");
+                }
+            } catch (error) {
+                console.error("Error al agregar canción:", error);
+                alert("❌ No se pudo agregar la canción. Ver consola.");
+            }
+        }
+    </script>
+</section>
 
 
 
