--- a/index.html
+++ b/index.html
@@ -294,9 +294,22 @@ Seguime en mi cuenta de Instagram y etiquetame en tus fotos y videos.</p>
         </iframe>
 
         <br>
+<br>
+
+
+    <img src="assets/img/icono-canciones.svg" alt="" class="bounce-in">
+
+    <br>
+    <div class="animated divCanciones">
+      <h4>¡PLAYLIST!</h4>
+
+      <p>¡Ayudame sugiriendo las canciones que pensás que no pueden faltar en la fiesta!</p>
+      <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSflLqhwmhvp2uNeFbliUVQFj3Yhgkko3xh0nRF-6A47T-aCKg/viewform?usp=header" class="btn btn-alt">Sugerir canción</a>
+    </div>
+  </div>
         <div class="animated divCanciones">
             <input type="text" id="songSearch" placeholder="Escribe una canción...">
-            <button onclick="searchSong()">🔍 Buscar</button>
+            <button onclick="searchSong()"> Buscar</button>
             <div id="searchResults"></div>
         </div>
     </div>
@@ -405,20 +418,6 @@ Seguime en mi cuenta de Instagram y etiquetame en tus fotos y videos.</p>
 </section>
 
 
-
-<br>
-
-
-    <img src="assets/img/icono-canciones.svg" alt="" class="bounce-in">
-
-    <br>
-    <div class="animated divCanciones">
-      <h4>¡PLAYLIST!</h4>
-
-      <p>¡Ayudame sugiriendo las canciones que pensás que no pueden faltar en la fiesta!</p>
-      <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSflLqhwmhvp2uNeFbliUVQFj3Yhgkko3xh0nRF-6A47T-aCKg/viewform?usp=header" class="btn btn-alt">Sugerir canción</a>
-    </div>
-  </div>
 
 </section>
     <!-- CBU -->
