--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ Seguime en mi cuenta de Instagram y etiquetame en tus fotos y videos.</p>
             border-radius: 8px;
             border: 1px solid rgba(255, 255, 255, 0.2);
             background: rgba(255, 255, 255, 0.05);
-            color: white;
+            color: black;
         }
         
         .search-btn {
