--- a/index.html
+++ b/index.html
@@ -389,6 +389,7 @@ Seguime en mi cuenta de Instagram y etiquetame en tus fotos y videos.</p>
             display: flex;
             gap: 10px;
             margin-bottom: 15px;
+            color: black;
         }
         
         .search-box input {
