--- a/index.html
+++ b/index.html
@@ -646,10 +646,10 @@ Seguime en mi cuenta de Instagram y etiquetame en tus fotos y videos.</p>
     }
 
     // Conectar con Spotify - SOLUCIÓN DEFINITIVA
-    function connectWithSpotify() {
-        // Construir URL de autorización
-        const authUrl = `https://accounts.spotify.com/authorize?client_id=${SPOTIFY_CONFIG.CLIENT_ID}&response_type=token&redirect_uri=${encodeURIComponent(SPOTIFY_CONFIG.REDIRECT_URI)}&scope=${encodeURIComponent(SPOTIFY_CONFIG.SCOPES)}&show_dialog=true`;
-        
+   function connectWithSpotify() {
+    const authUrl = `https://accounts.spotify.com/authorize?client_id=${SPOTIFY_CONFIG.CLIENT_ID}&response_type=token&redirect_uri=${encodeURIComponent(SPOTIFY_CONFIG.REDIRECT_URI)}&scope=${encodeURIComponent(SPOTIFY_CONFIG.SCOPES)}&show_dialog=true`;
+    window.location.href = authUrl;
+}
         // Para móviles, redirigir en la misma ventana
         if (isMobileDevice()) {
             window.location.href = authUrl;
