--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                     <ul>
                         <li>Nombre del Titular: Alfonsina Panza Fontana</li>
                         <li>CBU: 0140300603658455259699</li>
-                        <li>Alias: alfonsina.panza.fontana</li>
+                        <li>Alias: Alfonsiiina</li>
                         <li>DNI: 50.646.413</li>
                         <li>Cuenta DNI</li>
                     </ul>
