--- a/index.html
+++ b/index.html
@@ -470,36 +470,36 @@
         </div>
     </section>
 
-    <!-- CBU -->
-    <section class="cbu">
-        <div class="container">
-            <img src="assets/img/icono-regalo.svg" alt="" class="bounce-in">
-            <div class="animated divCbu">
-                <p>El mejor regalo es que vengas,</br>
-                pero si deseás regalarme algo, podés colaborar con mis sueños y anhelos✨</br>
-                ¡Muchas gracias!</p>
-                <a data-fancybox data-src="#hidden-cbu" href="javascript:;" data-options='{"touch" : false}' class="btn btn-alt">Hacer un regalo</a>
+  <!-- CBU -->
+<section class="cbu">
+    <div class="container">
+        <img src="assets/img/icono-regalo.svg" alt="" class="bounce-in">
+        <div class="animated divCbu">
+            <p>El mejor regalo es que vengas,</br>
+            pero si deseás regalarme algo, podés colaborar con mis sueños y anhelos✨</br>
+            ¡Muchas gracias!</p>
+            <a data-fancybox data-src="#hidden-cbu" href="javascript:;" data-options='{"touch" : false}' class="btn">Hacer un regalo</a>
 
-                <!-- Datos CBU (hidden by default) -->
-                <div style="display: none;" id="hidden-cbu">
-                    <span class="title">Datos Bancarios</span>
-                    <ul>
-                        <li>Nombre del Titular: Alfonsina Panza Fontana</li>
-                        <li>CBU: 0140300603658455259699</li>
-                        <li>Alias: Alfonsiiina</li>
-                        <li>DNI: 50.646.413</li>
-                        <li>Cuenta DNI</li>
-                    </ul>
+            <!-- Datos CBU (hidden by default) -->
+            <div style="display: none;" id="hidden-cbu">
+                <span class="title">Datos Bancarios</span>
+                <ul>
+                    <li>Nombre del Titular: Alfonsina Panza Fontana</li>
+                    <li>CBU: 0140300603658455259699</li>
+                    <li>Alias: Alfonsiiina</li>
+                    <li>DNI: 50.646.413</li>
+                    <li>Cuenta DNI</li>
+                </ul>
 
-                    <span class="title">Buzón de regalos</span>
-                    <ul>
-                        <li>Si deseás hacer tu regalo personalmente, </br>
-                        El día del evento habrá un buzón para dejar obsequios.</li>
-                    </ul>
-                </div>
+                <span class="title">Buzón de regalos</span>
+                <ul>
+                    <li>Si deseás hacer tu regalo personalmente, </br>
+                    El día del evento habrá un buzón para dejar obsequios.</li>
+                </ul>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Carga de Fotos y Videos -->
     <section class="carga-fotos-videos">
