--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
         </div>
     </section>
 
-  <!-- CBU -->
+ <!-- CBU -->
 <section class="cbu">
     <div class="container">
         <img src="assets/img/icono-regalo.svg" alt="" class="bounce-in">
@@ -478,7 +478,7 @@
             <p>El mejor regalo es que vengas,</br>
             pero si deseás regalarme algo, podés colaborar con mis sueños y anhelos✨</br>
             ¡Muchas gracias!</p>
-            <a data-fancybox data-src="#hidden-cbu" href="javascript:;" data-options='{"touch" : false}' class="btn">Hacer un regalo</a>
+            <a data-fancybox data-src="#hidden-cbu" href="javascript:;" data-options='{"touch" : false}' class="btn-alt">Hacer un regalo</a>
 
             <!-- Datos CBU (hidden by default) -->
             <div style="display: none;" id="hidden-cbu">
