--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
             <p>El mejor regalo es que vengas,</br>
             pero si deseás regalarme algo, podés colaborar con mis sueños y anhelos✨</br>
             ¡Muchas gracias!</p>
-            <a data-fancybox data-src="#hidden-cbu" href="javascript:;" data-options='{"touch" : false}' class="btn-alt">Hacer un regalo</a>
+            <a data-fancybox data-src="#hidden-cbu" href="javascript:;" class="btn">Hacer un regalo</a>
 
             <!-- Datos CBU (hidden by default) -->
             <div style="display: none;" id="hidden-cbu">
