--- a/index.html
+++ b/index.html
@@ -501,22 +501,28 @@
     </div>
 </section>
 
-    <!-- Carga de Fotos y Videos -->
-    <section class="carga-fotos-videos">
-        <div class="container text-center">
-            <h3>¡Comparte tus fotos y videos!</h3>
-            <p>Sube las fotos y videos que captures durante la fiesta para que podamos compartir recuerdos inolvidables.</p>
+   <!-- Carga de Fotos y Videos -->
+<section class="carga-fotos-videos">
+    <div class="container text-center">
+        <br> <!-- Espacio adicional antes del título -->
+        <h3>¡Comparte tus fotos y videos!</h3>
+        <p>
+            Sube las fotos y videos que captures durante la fiesta<br> <!-- Salto de línea añadido -->
+            para que podamos compartir recuerdos inolvidables.
+        </p>
 
-            <a href="https://weduploader.com/upload/8qd8DP2R6BloZQUQ" target="_blank" class="btn btn-primary mb-3">Subir Fotos/Videos</a> 
+        <a href="https://weduploader.com/upload/8qd8DP2R6BloZQUQ" target="_blank" class="btn btn-primary mb-3">Subir Fotos/Videos</a> 
 
-            <div class="qr-container mt-4">
-                <p>O escanea el código QR para subir tus recuerdos:</p>
-                <a href="https://weduploader.com/upload/8qd8DP2R6BloZQUQ" target="_blank">
-                    <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://weduploader.com/upload/8qd8DP2R6BloZQUQ" alt="Código QR para subir archivos" class="img-fluid" />
-                </a>
-            </div>
+        <div class="qr-container mt-4">
+            <br> <!-- Espacio adicional antes del QR -->
+            <p>O escanea el código QR para subir tus recuerdos:</p>
+            <a href="https://weduploader.com/upload/8qd8DP2R6BloZQUQ" target="_blank">
+                <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://weduploader.com/upload/8qd8DP2R6BloZQUQ" alt="Código QR para subir archivos" class="img-fluid" />
+            </a>
+            <br><br> <!-- Espacios adicionales después del QR -->
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Agradecimiento -->
     <section class="gracias">
